# Distributed-System-in-ROS2

./: README.md
dev_opencv/: CMakeLists.txt  package.xml
dev_opencv/src/: pub_cam.cpp  sub_cam.cpp
dev_opencv_py/dev_opencv_py/: cam_pub.py  cam_sub.py
